--- a/MyDemoProject/MyDemoPorject.PublicWebsite/MyDemoProject.PublicWebsite.csproj
+++ b/MyDemoProject/MyDemoPorject.PublicWebsite/MyDemoProject.PublicWebsite.csproj
@@ -139,6 +139,7 @@
     <Content Include="js\Catalog.js" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="scripts\calljson.js" />
     <Content Include="Style\Catalog.css" />
     <Content Include="Web.config" />
   </ItemGroup>
